totaljobs.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;jobrelated",
  "char_count": 5208,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.77,
  "homepage_snapshot_redirected_domain": "totaljobs.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060325023448id_/http://www.totaljobs.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060325023448id_/http%3A//totaljobs.com",
  "interval": "2006_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "totaljobs.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615054943id_/http%3A//www.totaljobs.com/Contents/PrivacyPolicy.aspx",
  "policy_title": "Privacy policy",
  "policy_url": "totaljobs.com/Contents/PrivacyPolicy.aspx",
  "sha1": "f8b4a6514fddf24144aeffedd4c74cad9789f280",
  "simhash": 12808492006872275217,
  "simhash_updated": true,
  "site_hostname": "totaljobs.com",
  "site_url": "http://totaljobs.com",
  "smog": 14.22,
  "strict_updated": true,
  "timestamp": "20060615054943",
  "word_count": 854,
  "year": 2006
}

--- a/t/to/tot/totaljobs.com.html
+++ b/t/to/tot/totaljobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the totaljobs.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228150704id_/http%3A//www.totaljobs.com/Contents/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the totaljobs.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615054943id_/http%3A//www.totaljobs.com/Contents/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -20,7 +20,7 @@
 <tbody><tr>
 <td><img src="/img/_.gif" border="0" width="8" height="1"></td>
 <td><img src="/img/_.gif" border="0" width="1" height="8"><br><a href="/JobSearch/JobSearch.aspx"><img src="/img/logo.gif" id="header_glbLogo" border="0" width="379" height="32"></a><br><img src="/img/_.gif" border="0" width="1" height="11"><br><a href="/JobSearch/JobSearch.aspx"><img src="/img/home.gif" border="0" width="65" height="20"></a><a href="/Authenticated/Default.aspx"><img src="/img/mytj.gif" border="0" width="115" height="20"></a><img src="/img/_.gif" border="0" width="10" height="1"><a href="https://recruiter.totaljobs.com"><img src="/img/forrec.gif" border="0" width="130" height="20"></a><br><img src="/img/_.gif" border="0" width="1" height="5"></td>
-<td align="right" class="HDbnt"><div class="HDbn"><iframe width="360" height="60" noresize="" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" src="http://adserver.adtech.de/?adiframe|2.0|289|132779|1|34|KEY=;grp=4705;target=_top;"><script language="javascript" src="http://adserver.adtech.de/?addyn|2.0|289|132779|1|34|KEY=;grp=4705;target=_top;loc=700;"></script></iframe></div></td>
+<td align="right" class="HDbnt"><div class="HDbn"><iframe width="360" height="60" noresize="" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" src="http://adserver.adtech.de/?adiframe|2.0|289|132779|1|34|KEY=;grp=2776;target=_top;"><script language="javascript" src="http://adserver.adtech.de/?addyn|2.0|289|132779|1|34|KEY=;grp=2776;target=_top;loc=700;"></script></iframe></div></td>
 </tr>
 </tbody></table>
 
@@ -49,7 +49,7 @@
 <table border="0" cellspacing="0" cellpadding="0" class="DMY">
 <tbody><tr>
 <td><a href="/accessible" class="p11bl">Text only site</a></td>
-<td align="right" class="p11gy">Wednesday 28 December 2005</td>
+<td align="right" class="p11gy">Thursday 15 June 2006</td>
 </tr>
 </tbody></table>
 <table border="0" cellspacing="10" cellpadding="0" class="CTbd">
@@ -105,13 +105,15 @@ You have the option to decline or accept these cookies, but if you decline you w
 <b>Cookie warning:</b> This site uses cookies. <a href="/Contents/PrivacyPolicy.aspx#cookiepolicy" class="ftlk">More information...</a><img src="/img/_.gif" border="0" width="20" height="1"><a id="footer_CookieOption_lnkAccept" class="ftlk" href="javascript:acceptCookies(true);">Accept cookies</a><img src="/img/_.gif" border="0" width="20" height="1"><a id="footer_CookieOption_lnkDecline" class="ftlk" href="javascript:declineCookies();">Decline cookies</a>
 <br><br>© Copyright and database rights Totaljobs Group Ltd 2005
 <br><a href="/Accessible" class="ftlk">Text only site</a> | <a href="/JobSeeking/Search_by_location.html" class="ftlk">Browse jobs by location</a> | <a href="/JobSeeking/Search_by_sector.html" class="ftlk">Browse jobs by industry/sector</a> | <a href="/JobSeeking/Search_by_job_role_A.html" class="ftlk">Browse by job role</a> | <a href="/JobSeeking/Sitemap.aspx" class="ftlk">Site map</a> | <a href="http://www.goyocal.com" target="_blank" class="ftlk">Local jobs</a> | 
-<a href="#" onclick="javascript:window.external.AddFavorite(location.href,document.title)" class="footer">Add to favourites</a>
 
-<br><a href="http://recruiter.totaljobs.com" class="ftlk">Advertiser info</a> | <a href="/Contents/Content/AboutUs.html" class="ftlk">About us</a> | <a href="/Contents/Content/ContactUs.html" class="ftlk">Contact us</a> | <a href="/Contents/Content/Affiliates.html" class="ftlk">Affiliates</a> | <a href="/Contents/Content/Disclaimer.html" class="ftlk">Disclaimer</a> | <a href="/Contents/Content/TermsAndConditions.html" class="ftlk">Terms and Conditions</a> | <a href="/Contents/PrivacyPolicy.aspx" class="ftlk">Privacy policy</a> | <a href="/Contents/Content/TermsAndConditions.html#JobSeekerBrowser" class="ftlk">Browser policy</a>
-<br><br>
-<img src="/img/ABC.gif" border="0" width="51" height="41">
+Press Ctrl+D to bookmark Totaljobs.com
+<br><a href="http://recruiter.totaljobs.com" class="ftlk">Advertiser info</a> | <a href="/Contents/Content/AboutUs.html" class="ftlk">About us</a> | <a href="/Contents/Content/ContactUs.html" class="ftlk">Contact us</a> | <a href="/Contents/Content/Affiliates.html" class="ftlk">Affiliates</a> | <a href="/Contents/Content/Disclaimer.html" class="ftlk">Disclaimer</a> | <a href="/Contents/Content/TermsAndConditions.html" class="ftlk">Terms and Conditions</a> | 
+<a href="/Contents/PrivacyPolicy.aspx" class="ftlk">Privacy policy</a> | 
+<a href="/Contents/Content/TermsAndConditions.html#JobSeekerBrowser" class="ftlk">Browser policy</a> | <a href="../" id="footer_A1" class="ftlk">Jobs</a> | <a href="https://recruiter.totaljobs.com/Recruitment/InstantJobPosting/Intro.aspx" id="footer_A2" class="ftlk">Post a job</a>
 </td></tr>
 </tbody></table>
+<br>
+<table width="100%" cellpadding="0" cellspacing="0" border="0"><tbody><tr><td width="7%"></td><td width="43%" align="left"><img src="/img/ABC.gif" border="0" width="51" height="41"></td><td width="43%" align="right"><img src="/img/79x41_eSuperbrand.gif" border="0" width="79" height="41"></td><td width="7%"></td></tr></tbody></table>
 </td></tr>
 </tbody></table>
 
@@ -131,6 +133,7 @@ var DCS=new Object();
 var WT=new Object();
 var DCSext=new Object();
 var gQP=new Array();
+var bUseFPC=true;
 </script><script language="Javascript">SDCPathNameOverride='/Contents/PrivacyPolicy.aspx';WT.sv='02';</script><script language="Javascript"><!--
 gVersion="1.0";
 //-->
