--- a/n/ng/nge/ngex.com.html
+++ b/n/ng/nge/ngex.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ngex.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216040220id_/http%3A//www.ngex.com/info/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ngex.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615055431id_/http%3A//ngex.com/info/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head><title>NgEX! NigeriaExchange - Nigeria -&gt; Constitution</title>
 <meta name="Author" value="Netron Systems Limited">
@@ -137,7 +137,7 @@ document.write('</A><BR></CENTER></FONT>');
 // -->
 
 		
-		</script><a href="cgi-bin/banners/bannerad.exe?bf=nig&amp;channel=7&amp;usr=null"><img src="banners/nigch7.gif" align="middle" border="0" width="468" height="60"></a><br><font size="1" face="verdana,arial"><center><a href="cgi-bin/banners/bannerad.exe?bf=nig&amp;channel=7&amp;usr=null&quot;">Click Here</a><br></center></font> 
+		</script><a href="cgi-bin/banners/bannerad.exe?bf=nig&amp;channel=9&amp;usr=null"><img src="banners/nigch9.gif" align="middle" border="0" width="468" height="60"></a><br><font size="1" face="verdana,arial"><center><a href="cgi-bin/banners/bannerad.exe?bf=nig&amp;channel=9&amp;usr=null&quot;">Click Here</a><br></center></font> 
 	<!-- banner  -->
 
 </td>
