--- a/m/mu/mus/museum.ie.html
+++ b/m/mu/mus/museum.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the museum.ie privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221093657id_/http%3A//www.museum.ie/generic/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the museum.ie privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615055514id_/http%3A//museum.ie/generic/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
