matrixmails.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 3789,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.43,
  "homepage_snapshot_redirected_domain": "matrixmails.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060408013859id_/http://matrixmails.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060408013859id_/http%3A//matrixmails.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "matrixmails.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615055730id_/http%3A//www.matrixmails.com/%3Fp%3Dprivacy",
  "policy_title": "Matrixmails - Paid emails, paid to click and paid to signup offers to earn money online!",
  "policy_url": "matrixmails.com/?p=privacy",
  "sha1": "495b18e646148288fe7f6d0d59def9e9a048f412",
  "simhash": 17277700584855721034,
  "simhash_updated": false,
  "site_hostname": "matrixmails.com",
  "site_url": "http://matrixmails.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615055730",
  "word_count": 582,
  "year": 2006
}

--- a/m/ma/mat/matrixmails.com.html
+++ b/m/ma/mat/matrixmails.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the matrixmails.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231162104id_/http%3A//www.matrixmails.com/%3Fp%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the matrixmails.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615055730id_/http%3A//www.matrixmails.com/%3Fp%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Matrixmails - Paid emails, paid to click and paid to signup offers to earn money online!</title>
@@ -21,7 +21,23 @@
        <td width="605" height="90%">
            <div align="center">
                 <br>
-                <font color="#ff6400" size="3"><b>Privacy Policy:</b><br>
+				<table width="468" border="0" cellspacing="1" cellpadding="1" bgcolor="#003c70">
+					<tbody><tr>
+						<td bgcolor="white">
+							<div align="center">
+								<!-- Begin: AdBrite -->
+								<style type="text/css">
+.adHeadline {font: bold 10pt Arial; text-decoration: underline; color: blue;}
+.adText {font: normal 10pt Arial; text-decoration: none; color: black;}
+</style>
+								<script type="text/javascript" src="http://4.adbrite.com/mb/text_group.php?sid=75537&amp;col=3&amp;br=1&amp;dk=736d616c6c20627573696e6573735f36"></script>
+								<p>
+								<a class="adHeadline" target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=75537&amp;afsid=1">Your Ad Here</a><!-- End: AdBrite --></p></div>
+						</td>
+					</tr>
+				</tbody></table>
+				<br>
+				<font color="#ff6400" size="3"><b>Privacy Policy:</b><br>
                 </font>
                 <p><font size="2" face="arial" color="#003468"><font size="3" face="arial" color="#ff6400"><b>Information Collected<br>
                 </b></font><font size="2" face="arial" color="#003468">MatrixMails has created this privacy statement in order to demonstrate our firm commitment to privacy. MatrixMails uses your IP address to help diagnose problems with our server, and to administer our Web site. Your IP address is used to gather broad demographic information. MatrixMails uses cookies to deliver content specific to your interests, to save your password so you don't have to re-enter it each time you visit our site, and for other purposes. MatrixMails's registration form requires users to give us contact information (like their name, address, and email address). MatrixMails uses member contact information from the registration form to send the member information about our company and email advertisements. Members may opt-out of receiving future mailings; see the choice/opt-out section below. Demographic and profile data is also collected at our site. We use this data to tailor the visitor's experience at our site, showing them content that we think they might be interested in, and displaying the content according to their preferences. We collect personal offline information for the sole purpose of paying members for earnings from our program. This site contains links to other sites. MatrixMails is not responsible for the privacy practices or the content of such Web sites. MatrixMails uses a signup form for new members and advertisers. We collect visitor's contact information (like their email address, address, and name). The member's contact information is used to get in touch with the member when necessary. Users may opt-out of receiving future mailings; see the choice/opt-out section below.</font><font size="2" face="arial"><br>
@@ -41,7 +57,9 @@
                 <font size="3" face="arial" color="#ff6400"><b>Correct/Update:</b></font></font><font size="2" face="arial" color="#003468"><br>
                 MatrixMails gives users the following options for changing and modifying information previously provided. Members Area - login and change your personal information. Contacting the Web Site If you have any questions about this privacy statement, the practices of this site, or your dealings with MatrixMails, you can <a href="http://www.matrixmails.com/?p=contactus">Contact Us</a></font><font color="#003468"><br>
                 </font></font></p>
-           </div>
+				<br>
+				<br>
+			</div>
        </td>
    </tr>
 </tbody></table></td></tr></tbody></table><table width="530" border="0" cellspacing="0" cellpadding="0" height="30"><tbody><tr><td width="10" height="60" background="http://www.matrixmails.com/images/Left.gif"><img src="http://www.matrixmails.com/images/Left.gif" alt="" height="40" width="10" border="0"></td><td width="120" height="60" background="http://www.matrixmails.com/images/AltY.gif"><img src="http://www.matrixmails.com/images/AltY.gif" alt="" height="40" width="120" border="0"></td><td valign="bottom" width="400" height="60" background="http://www.matrixmails.com/images/AltK.gif"><p><font size="1" color="#003468" face="Arial">© Copyright 2002 All Rights Reserved MatrixMails.com<br> <br></font></p></td></tr></tbody></table></body></html>
