imagecave.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 906,
  "classifier_probability": 0.8,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 19.28,
  "homepage_snapshot_redirected_domain": "imagecave.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402221033id_/http://imagecave.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402221033id_/http%3A//imagecave.com",
  "interval": "2006_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "imagecave.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615055840id_/http%3A//imagecave.com/privacy.asp",
  "policy_title": "Imagecave.com privacy statement.",
  "policy_url": "imagecave.com/privacy.asp",
  "sha1": "07a4af29228566dd99cc3aa753e22c2564bf0a6a",
  "simhash": 6064527018737782604,
  "simhash_updated": false,
  "site_hostname": "imagecave.com",
  "site_url": "http://imagecave.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615055840",
  "word_count": 142,
  "year": 2006
}

--- a/i/im/ima/imagecave.com.html
+++ b/i/im/ima/imagecave.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the imagecave.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220042731id_/http%3A//imagecave.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the imagecave.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615055840id_/http%3A//imagecave.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="keywords" content="free image hosting, image hosting, ebay photo, free photo hosting, myspace hosting, myspace, picture hosting, photo gallery, auction image hosting, ebay picture hosting, upload pictures, png, bmp">
@@ -94,7 +94,7 @@ a:hover {color: #ff0000;}
 <a href="http://www.newblog.com" title="Free blogging service at NewBlog.com">Free Blogging</a> | 
 <a href="http://news.onebigvillage.com" title="OBV News Service">OBV News</a> | 
 <a href="/html/" title="HTML Practice">HTML Practice</a> | 
-<a href="http://forums.imagecave.com/phpbb/viewforum.php?f=1" title="System news and announcements">Announcements</a> | 
+<a href="http://forums.ripside.com/phpbb/viewforum.php?f=1" title="System news and announcements">Announcements</a> | 
 <a href="/links/" title="Important links">Affiliates</a><br>
 <a href="/tutorials/" title="Uploading tutorials">Tutorials</a> | 
 <a href="/contact/" title="Contact the staff at imagecave.com">Contact Us</a><br>
