--- a/v/vo/voi/voiceshot.com.html
+++ b/v/vo/voi/voiceshot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the voiceshot.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231210408id_/http%3A//www.voiceshot.com/public/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the voiceshot.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615055925id_/http%3A//voiceshot.com/public/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy</title>
