--- a/i/io/iow/iowatreasurers.org.html
+++ b/i/io/iow/iowatreasurers.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iowatreasurers.org privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219015509id_/http%3A//www.iowatreasurers.org/citizen.cfm%3FID%3D1%26ParentPage%3D107) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iowatreasurers.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615060229id_/http%3A//iowatreasurers.org/citizen.cfm%3FID%3D1%26ParentPage%3D107) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!--Begin Parent Page Start --><head>
 <title>Iowa State County Treasurers Association</title>
