--- a/i/it/ito/itools.com.html
+++ b/i/it/ito/itools.com.html
@@ -1,12 +1,14 @@
-<!--The following is the downloaded HTML source of the itools.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230221625id_/http%3A//www.itools.com/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itools.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615060302id_/http%3A//itools.com/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>iTools Privacy Statement</title>
 	<meta name="Keywords" content="iTools,privacy statement,privacy,cookies">
 	<meta name="Description" content="iTools respects each individual’s right to personal privacy.  We will collect and use information through our Web site only in the ways disclosed in this statement.">
 	<meta name="Author" content="Paul Sarena">
+
 	<link rel="stylesheet" type="text/css" href="/itools.css">
+
 	<script type="text/javascript" src="/popup.js"></script>
 	<script type="text/javascript" src="/nav.js"></script>
 </head>
@@ -77,21 +79,13 @@
 		
 			<tr>
 							<td class="nav-left" onclick="JavaScript:location.href='http://www.itools.com/people/';return false" onmouseover="nav_over(this);window.status='http://www.itools.com/people/'" onmouseout="nav_out(this);window.status=''">
-					<a href="http://www.itools.com/people/"><nobr>Find People Tools</nobr></a><div class="nav-desc">Find people on the Internet</div>
+					<a href="http://www.itools.com/people/"><nobr>Find People</nobr></a><div class="nav-desc">Find people on the Internet</div>
 				</td>
 			</tr>
 		
 			<tr><td>&nbsp;</td></tr>
 		</tbody></table>
-			<script type="text/javascript"><!--
-google_ad_client = "pub-8505480209677118";
-google_ad_width = 125;
-google_ad_height = 125;
-google_ad_format = "125x125_as_rimg";
-google_cpa_choice = "CAAQo-aZzgEaCM3CU97Siy5UKK2293M";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script><br><br><br>
+			<br><br><br>
 			<script type="text/javascript"><!--
 google_ad_client = "pub-8505480209677118";
 
@@ -107,7 +101,10 @@ google_color_url = "999999";
 google_color_text = "555555";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></td>
+</script>
+			<br><br><br>
+			
+		</td>
 		<td align="center">
 			<div class="navsub-box">
 			
@@ -144,7 +141,67 @@ We use the log files to analyze trends, administer the site, track user’s move
 <blockquote>This Web site contains links to other sites. Please be aware that we are not responsible for the privacy practices of such other sites.  We encourage our users to be aware when they leave our site and to read the privacy statements of each and every Web site that collects personally identifiable information.</blockquote>
 
 <h3 class="heading-med">Contact Information</h3>
-<blockquote>If users have questions or concerns regarding this statement, they should contact our Privacy Group by sending an email to <a href="mailto:webprivacy@itools.com">webprivacy@itools.com</a></blockquote>
+<blockquote>If users have questions or concerns regarding this statement, they should send them to <script type="text/javascript">
+// <!-- Generates an HTML link to an email address passed as an encrypted string generated from Jim Tu+cek's (c)2004 script at www.jr+academy.com/~jtuc+ek/email/  (remove all + characters to the left)
+
+function forego(microorganism,ability,nitrogen) {
+	microorganism += ' ';
+	var area = microorganism.length;
+	var agreement = 0;
+	var library = '';
+	for(var belt = 0; belt < area; belt++) {
+		agreement = 0;
+		while(microorganism.charCodeAt(belt) != 32) {
+			agreement = agreement * 10;
+			agreement = agreement + microorganism.charCodeAt(belt)-48;
+			belt++;
+		}
+		library += String.fromCharCode(spend(agreement,ability,nitrogen));
+	}
+	parent.location = 'm'+'a'+'i'+'l'+'t'+'o'+':'+library;
+}
+
+function hang(language,rocket,state) {
+	language += ' ';
+	var minimum = language.length;
+	var control = 0;
+	for(var matrix = 0; matrix < minimum; matrix++) {
+		control = 0;
+		while(language.charCodeAt(matrix) != 32) {
+			control = control * 10;
+			control = control + language.charCodeAt(matrix)-48;
+			matrix++;
+		}
+		//document.write('&');
+		//document.write('#');
+		//document.write(spend(control,rocket,state));
+		document.write(String.fromCharCode(spend(control,rocket,state)));
+	}
+}
+
+function spend(oxygen,spoon,historian) {
+	if (historian % 2 == 0) {
+		drawer = 1;
+		for(var orador = 1; orador <= historian/2; orador++) {
+			grandmother = (oxygen*oxygen) % spoon;
+			drawer = (grandmother*drawer) % spoon;
+		}
+	} else {
+		drawer = oxygen;
+		for(var waste = 1; waste <= historian/2; waste++) {
+			grandmother = (oxygen*oxygen) % spoon;
+			drawer = (grandmother*drawer) % spoon;
+		}
+	}
+	return drawer;
+}
+// -->
+</script>
+
+
+
+
+<a href='javascript:forego("24816 31767 13774 1416 27014 9621 20659 32099 15174 27014 15174 4879 7612 4879 14087 15174 21064 13774 15174 5925 5925 27104 32099 28309 9621 5925 7612", 34547, 27341)' onmouseover="self.status=''; return true;" onmouseout="self.status=' '; return true;"><script type="text/javascript">hang("24816 31767 13774 1416 27014 9621 20659 32099 15174 27014 15174 4879 7612 4879 14087 15174 21064 13774 15174 5925 5925 27104 32099 28309 9621 5925 7612", 34547, 27341)</script>privacystatement@itools.com</a></blockquote>
 
 </blockquote>
 <p>This page is <a href="/info/privacy/">http://www.itools.com/info/privacy/</a></p>
@@ -156,7 +213,7 @@ We use the log files to analyze trends, administer the site, track user’s move
 
 <!--Foot-->
 <div class="bar-footer">
-	<span style="font-family:Arial,sans-serif">©</span> 1995-2005 <b>iTools</b><sup>™</sup>
+	<span style="font-family:Arial,sans-serif">©</span> 1995-2006 <b>iTools</b><sup>™</sup>
 	<a href="/contact/">Contact Us</a> |
 	<a href="/info/terms/">Terms of Service</a> |
 	<a href="/info/privacy/">Privacy Statement</a> &nbsp; -
