911tabs.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1757,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.44,
  "homepage_snapshot_redirected_domain": "911tabs.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331133136id_/http://911tabs.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331133136id_/http%3A//911tabs.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "911tabs.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615060327id_/http%3A//911tabs.com/about/privacy_policy.htm",
  "policy_title": "Privacy Policy @ 911Tabs.Com",
  "policy_url": "911tabs.com/about/privacy_policy.htm",
  "sha1": "a05e87df744296508c16e51a5f9491b50f3dc590",
  "simhash": 7142987988358665216,
  "simhash_updated": true,
  "site_hostname": "911tabs.com",
  "site_url": "http://911tabs.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615060327",
  "word_count": 285,
  "year": 2006
}

--- a/9/91/911/911tabs.com.html
+++ b/9/91/911/911tabs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 911tabs.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216175440id_/http%3A//911tabs.com/about/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 911tabs.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615060327id_/http%3A//911tabs.com/about/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy @ 911Tabs.Com</title>
 <meta name="description" content="911Tabs.Com - Tabs Search Engine. Over 300,000 tabs!">
@@ -22,6 +22,11 @@
 				+  <a href="/about/search_tips.htm">Search Tips</a></p><p style="margin-top:3px">
 				+  <a href="/about/stats.htm">Stats</a></p><p style="margin-top:3px">
 				+  <a href="/about/add_your_site.htm"><b>Add Your Site</b></a></p><p style="margin-top:15px">
+																				
+				+  <a href="/about/register.htm"><b>Why register?</b></a></p><p style="margin-top:3px">
+				+  <a href="/about/favorites.htm"><b>What is Favorite artists?</b></a></p><p style="margin-top:3px">
+				+  <a href="/about/songbooks.htm"><b>What is Songbook?</b></a></p><p style="margin-top:15px">
+
 				+  <a href="/about/advertising_info.htm">Advertising Info</a></p><p style="margin-top:3px">
 				+  <a href="/about/contact.htm">Contact 911Tabs</a></p><p style="margin-top:3px">
 				+  <a href="/about/links.htm">Links</a></p><p style="margin-top:3px">
