polepositionmarketing.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6250,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.0,
  "homepage_snapshot_redirected_domain": "polepositionmarketing.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060411061902id_/http://www.polepositionmarketing.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060411061902id_/http%3A//polepositionmarketing.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "polepositionmarketing.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615060652id_/http%3A//www.polepositionmarketing.com/privacy.php",
  "policy_title": "Pole Position Marketing Privacy Policy",
  "policy_url": "polepositionmarketing.com/privacy.php",
  "sha1": "29c0ffd47ecb00b0d9e6e710d2ecd783f086c782",
  "simhash": 10591042686120250499,
  "simhash_updated": false,
  "site_hostname": "polepositionmarketing.com",
  "site_url": "http://polepositionmarketing.com",
  "smog": 16.4,
  "strict_updated": false,
  "timestamp": "20060615060652",
  "word_count": 945,
  "year": 2006
}

--- a/p/po/pol/polepositionmarketing.com.html
+++ b/p/po/pol/polepositionmarketing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the polepositionmarketing.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217013532id_/http%3A//www.polepositionmarketing.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the polepositionmarketing.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615060652id_/http%3A//www.polepositionmarketing.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="http://www.polepositionmarketing.com/includes/styles-std.css" media="screen">
 	<script language="JavaScript" src="http://www.polepositionmarketing.com/includes/scripts.js" type="text/javascript"></script>
 	<script type="text/javascript" language="JavaScript" src="http://www.polepositionmarketing.com/includes/dropmenu.js"></script>
-	
+	<!--CodeMonitorIgnoreStart-->
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 _uacct = "UA-194051-1";
@@ -21,14 +21,15 @@ urchinTracker();
 </script>
 </head>
 
-<body>
+<body onload="javascript:__utmSetVar('209.237.238.228')">
 
 	<div id="pageBox">
 	<table width="780" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
 	<td></td>
 	<td rowspan="2" valign="top" id="contentTable">
-		<div id="content">  <p id="breadcrumbs"><a href="index.php">Home</a> » <strong>Privacy</strong></p>
+		<div id="content">
+		<!--CodeMonitorIgnoreStop-->  <p id="breadcrumbs"><a href="/">Home</a> » <strong>Privacy</strong></p>
   <p><strong>Privacy</strong></p>
   <p>This privacy policy covers the site http://www.polepositionmarketing.com,
     http://www.emarketingperformance.com, and http://www.pole-position-directory.com.
@@ -113,7 +114,7 @@ urchinTracker();
 	<div id="mainNav">
 	 <img src="http://www.polepositionmarketing.com/images/nav-company-info.jpg" alt="Pole Position Marketing Company Info" width="178" height="23" border="0">
 <ul>
-        <li><a href="http://www.polepositionmarketing.com/index.php">&nbsp;Home</a></li>
+        <li><a href="http://www.polepositionmarketing.com/">&nbsp;Home</a></li>
 		<li><a href="http://www.polepositionmarketing.com/contact-us.php">&nbsp;Contact Us</a></li>
 		<li><a href="http://www.polepositionmarketing.com/about-us.php">&nbsp;About PPM</a></li>
 		<li><a href="http://www.polepositionmarketing.com/compare.php">&nbsp;Why Choose PPM? </a></li>
@@ -126,17 +127,17 @@ urchinTracker();
 	<object type="application/x-shockwave-flash" data="http://www.polepositionmarketing.com/includes/google-search.swf" width="178" height="178">
       <param name="movie" value="http://www.polepositionmarketing.com/includes/google-search.swf">
     </object>
-	<br><br>
+	<br>  
 		
 	  
 	<p class="recposts">
 	<a href="http://www.emarketingperformance.com/" class="logoimage" target="_blank"><img src="http://www.polepositionmarketing.com/images/emp_medium_logo.gif" width="149" height="44" alt="emp logo" border="0"></a><br>
-	<a href="http://www.emarketingperformance.com/:/560/search-engines/google/search-volume-increases-15-in-q3-2005/" target="_blank">Search Volume Increases 15% in Q3, 2005</a>
-		<a href="http://www.emarketingperformance.com/:/559/search-marketing/research-your-targeted-keywords/" target="_blank">Research Your Targeted Keywords</a>
-		<a href="http://www.emarketingperformance.com/:/558/search-engines/google/search-engine-marketshare-growth/" target="_blank">Search Engine Marketshare &amp; Growth</a>
-		<a href="http://www.emarketingperformance.com/:/557/search-marketing/knowing-your-national-or-local-competitors/" target="_blank">Knowing Your National or Local Competitors</a>
-		<a href="http://www.emarketingperformance.com/:/555/search-marketing/is-ppc-management-much-more-than-a-crap-shoot/" target="_blank">Is PPC management much more than a crap-shoot?</a>
-		<a href="http://www.emarketingperformance.com/:/554/search-marketing/knowing-your-paid-placement-competitors/" target="_blank">Knowing Your Paid Placement Competitors</a>
+	<a href="http://www.emarketingperformance.com/:/769/general-marketing/clever-and-effective-marketing-campaign/" target="_blank">Clever (And Effective) Marketing Campaign</a>
+		<a href="http://www.emarketingperformance.com/:/779/search-marketing/seo-quick-tip-trust-your-seo/" target="_blank">SEO Quick Tip: Trust Your SEO</a>
+		<a href="http://www.emarketingperformance.com/:/774/business-principles/lessons-from-the-apprentice-season-5-wrap-up/" target="_blank">Lessons From The Apprentice: Season 5 Wrap-Up</a>
+		<a href="http://www.emarketingperformance.com/:/777/general-marketing/nostalgic-marketing-genius-and-the-success-of-the-hemi/" target="_blank">Nostalgic Marketing Genius and the Success of the “Hemi”</a>
+		<a href="http://www.emarketingperformance.com/:/767/search-marketing/leading-your-team-give-them-the-biger-picture/" target="_blank">Leading Your Team: Give them The Big(er) Picture</a>
+		<a href="http://www.emarketingperformance.com/:/766/search-marketing/seo-quick-tip-keep-content-purposeful/" target="_blank">SEO Quick Tip: Keep Content Purposeful</a>
 			<a href="http://www.emarketingperformance.com/" class="nodash" target="_blank">more...</a>
 	</p>	
 <br>
@@ -210,7 +211,7 @@ Engine Optimization Firms.</div></td>
 							<li><a href="http://www.polepositionmarketing.com/do-it-yourself.php"><span class="larger">Do-It-Yourself Consults</span></a></li>
 							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/keyword-research.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Keyword Research Bullet" width="4" height="8" border="0"> Keyword Research</a></li>
 							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/website-analysis.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Website Analysis Bullet" width="4" height="8" border="0"> Website Analysis</a></li>
-							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/consultations.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Personal Consultations Bullet" width="4" height="8" border="0"> Personal Consultations</a></li>
+							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/consultations.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Personal Consultations Bullet" width="4" height="8" border="0"> SEO Consultation</a></li>
 							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/usability-analysis.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Usability Analysis Bullet" width="4" height="8" border="0"> Usability Analysis</a></li>
 							<li><a href="http://www.polepositionmarketing.com/marketing-consulting/competitive-analysis.php"><img src="http://www.polepositionmarketing.com/images/bullet-arrow.gif" alt="Comptititve Analysis Bullet" width="4" height="8" border="0"> Competitive Analysis</a></li>
 						<li><a href="http://www.polepositionmarketing.com/improved-functionality.php"><span class="larger">Improve Functionality</span></a></li>
@@ -232,7 +233,7 @@ Engine Optimization Firms.</div></td>
 							
 							<li><a href="http://www.emarketingperformance.com/" target="_blank">(EMP) Marketing Blog</a></li>
 							<li><a href="http://www.pole-position-directory.com/" target="_blank">Pole Position Directory</a></li>
-							<li><a href="../Info Kit.pdf" target="_blank">Information Kit (pdf)</a></li>
+							<li><a href="http://www.polepositionmarketing.com/info-kit.pdf" target="_blank">Information Kit (pdf)</a></li>
 						</ul>
 				  </li>
 					
@@ -256,12 +257,12 @@ Engine Optimization Firms.</div></td>
 		
 		<div id="footer">
 	
-		<p>© 1998-2006 Pole Position  Marketing |  Reno, Nevada | <strong>(866)
+		<p>© 1998-2006 Pole Position  Marketing |  <a href="http://www.polepositionmarketing.com/about-us.php">Reno, Nevada</a> | <strong>(866)
 		    685-3374</strong> | <a href="http://www.polepositionmarketing.com/site-map.php">Site
-        Map</a> | <a href="http://www.polepositionmarketing.com/privacy.php">Privacy</a> | <a href="http://www.polepositionmarketing.com/resources/index.php">Resources</a> |
-        <a href="http://www.polepositionmarketing.com/link-to-us.php">Link to Us</a> | </p> 	
+        Map</a> | <a href="http://www.polepositionmarketing.com/privacy.php">Privacy</a> | <a href="http://www.polepositionmarketing.com/link-to-us.php">Link to Us</a> | </p> 	
 		
-		<script language="javascript" src="http://stats1.clicktracks.com/cgi-bin/ctasp-server.cgi?i=lSqp4dJRk3Nq9" type="text/javascript"></script><img alt="" border="0" height="0" width="0" src="http://www.polepositionweb.com/roi/registerHit.php?type=all"></div>
+		<script language="javascript" src="http://stats1.clicktracks.com/cgi-bin/ctasp-server.cgi?i=lSqp4dJRk3Nq9" type="text/javascript"></script>	
+<img src="https://www.polepositionweb.com/roi/registerHit.php?id=223-not" width="0" height="0" alt=""></div>
 </div>
 <!--CodeMonitorIgnoreStop-->
 
