mercyhurst.edu (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4830,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.95,
  "homepage_snapshot_redirected_domain": "mercyhurst.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060409011726id_/http://www.mercyhurst.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060409011726id_/http%3A//mercyhurst.edu",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mercyhurst.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615061210id_/http%3A//www.mercyhurst.edu/privacy-policy.php",
  "policy_title": "Mercyhurst College - Email Page",
  "policy_url": "mercyhurst.edu/privacy-policy.php",
  "sha1": "16259c5861e603dd6269115fe2f691ca3b119802",
  "simhash": 1969936365128609197,
  "simhash_updated": false,
  "site_hostname": "mercyhurst.edu",
  "site_url": "http://mercyhurst.edu",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615061210",
  "word_count": 771,
  "year": 2006
}

--- a/m/me/mer/mercyhurst.edu.html
+++ b/m/me/mer/mercyhurst.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mercyhurst.edu privacy policy that was archived on 2005-04-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050403112441id_/http%3A//www.mercyhurst.edu/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mercyhurst.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615061210id_/http%3A//www.mercyhurst.edu/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/sub_page1.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -22,7 +22,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table width="762" border="0" align="center" cellpadding="0" cellspacing="0">
 		<tbody><tr>
 				<td>
-												<table width="762" border="0" cellspacing="0" cellpadding="0">
+						<!-- Urching UTM content -->
+<script src="/__utm.js" type="text/javascript"></script>
+<!-- END Urchin UTM content -->
+						<table width="762" border="0" cellspacing="0" cellpadding="0">
             		<tbody><tr>
             				<td width="762" height="52" background="/media/sub_page/header_top.gif" bgcolor="#003366">
             						<table width="762" border="0" cellspacing="0" cellpadding="0">
@@ -39,11 +42,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 																									<option selected="">Shortcuts...</option>
 																									<option value="http://blackboard.mercyhurst.edu">Blackboard</option>
 																									<option value="http://lakershop.mercyhurst.edu">College Bookstore</option>
-																									<option value="http://calendar.mercyhurst.edu">Calendars</option>					
+																									<option value="http://calendar.mercyhurst.edu">Calendars</option>
+																									<option value="http://directory.mercyhurst.edu">Directory</option>
 																									<option value="http://merlin.mercyhurst.edu">Hammermill Library</option>
-																									<option value="http://lakernet.mercyhurst.edu/departments/h_r/job_postings_main.asp">Job Opportunities</option>
+																									<option value="http://lakernet.mercyhurst.edu/departments/h_r/job_postings.php">Job Opportunities</option>
 																									<option value="http://lakernet.mercyhurst.edu">LakerNet [Intranet]</option>
 																									<option value="http://merciad.mercyhurst.edu">Merciad</option>
+<option value="http://msg.mercyhurst.edu">MSG</option>
 																									<option value="http://northeast.mercyhurst.edu">North East Campus</option>
 																									<option value="http://webadvisor.mercyhurst.edu">WebAdvisor</option>
 																									<option value="http://webmail.mercyhurst.edu">WebMail</option>
@@ -72,13 +77,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
          				</tr>
             		<tr>
             			<td width="762" height="25" align="center" background="/media/sub_page/header_bottom.gif" bgcolor="#005B45" class="mnav">
+            							 <a href="/academics/">Academics</a> |
 										 <a href="/prospective/">Prospective Students &amp; Parents</a> |
 										 <a href="/current/">Current Students &amp; Parents</a> |
 										 <a href="/ne/">News &amp; Events</a> |
 										 <a href="/alumni/">Alumni</a> |
 										 <a href="/giving/">Make A Gift</a> |
-										 <a href="/athletics/">Athletics</a> |
-										 <a href="/contact/">Contact Info</a>
+										 <a href="http://www.hurstathletics.com/">Athletics</a>
 									</td>
          				</tr>
          		</tbody></table>
@@ -171,8 +176,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
             						<table width="762" border="0" cellpadding="0" cellspacing="0" class="footer">
                         		<tbody><tr>
                         				<td width="8"><img src="/media/tr.gif" width="8" height="26"></td>
-                        				<td width="372">501 East 38th Street, Erie, PA 16546 | (814) 824-2000 </td>
-                        				<td width="372" align="right">© 2001-2005 Mercyhurst College. | <a href="/site_tools/feedback.php?page=/privacy-policy.php">feedback</a> | <a href="/privacy-policy.php">privacy policy</a></td>
+                        				<td width="312">501 East 38th Street, Erie, PA 16546 | (814) 824-2000 </td>
+                        				<td width="432" align="right">© 2001-2006 Mercyhurst College. | <a href="/site_tools/feedback.php?page=/privacy-policy.php">feedback</a> | <a href="/privacy-policy.php">privacy policy</a> | <a href="/contact/">contact info</a></td>
                         				<td width="8"><img src="/media/tr.gif" width="8" height="26"></td>
                      				</tr>
                      		</tbody></table>
