--- a/n/ne/net/netiq.com.html
+++ b/n/ne/net/netiq.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netiq.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230075245id_/http%3A//www.netiq.com/about_netIQ/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netiq.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615061344id_/http%3A//www.netiq.com/about_netIQ/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta name="postinfo" content="/scripts/postinfo.asp">
@@ -7,16 +7,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="keywords" content="NetIQ, NetIQ Corporation, e-business infrastructure management">
 <meta name="WT.authuser" content="">
+<meta name="DCSext.origin" content="">
+<meta name="DCSext.arc" content="">
 <meta name="Description" content="NetIQ is the leading provider of solutions for systems management and security.">
-<link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/glb_framework_styles.css"><link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_framework_styles.css"><link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_generic_styles.css"><link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_class_styles.css">
+<link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/glb_framework_styles.css">
+<link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_framework_styles.css">
+<link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_generic_styles.css">
+<link rel="stylesheet" type="text/css" href="/shared/pageframework/styles/ntq_class_styles.css">
+<link rel="Shortcut Icon" href="/favicon.ico">
 <title>NetIQ: Privacy Policy</title>
 </head>
 
 <body>
-<script language="JavaScript" src="/shared/scripts/js_functions.js"></script>
-<script language="JavaScript" src="/shared/scripts/js_glb_toolkit.js"></script>
-
-
+<script language="JavaScript" type="text/javascript" src="/shared/scripts/js_functions.js"></script>
+<script language="JavaScript" type="text/javascript" src="/shared/scripts/js_glb_toolkit.js"></script>
+<script language="JavaScript" type="text/javascript" src="/shared/scripts/Menu_DummyFunctions.js"></script>
 
 <div id="container">
   	<!-- Logo -->
@@ -26,17 +31,17 @@
 		
 	</div>
 
-		<script language="JavaScript">
-		<!-- Hide from older browsers.
+	<script language="JavaScript">
+<!-- Hide from older browsers.
 		
-		// declare the variables that will be used by client side javascript
-		// for referencing urls, other .js files and images
+// declare the variables that will be used by client side javascript
+// for referencing urls, other .js files and images
 		
-		HM_RootLinkPath = "http://www.netiq.com/";
+HM_RootLinkPath = "http://www.netiq.com/";
 
-		
-			HM_RootLoadPath = "http://www.netiq.com/";
-		
+
+	HM_RootLoadPath = "http://www.netiq.com/";
+
 		
 		function getStartPosition_Array1() {					// Called by HM_Arrays, left_position parameter.
 		var objImg
@@ -111,22 +116,23 @@
 	  	}
 		return xPos;
 	}
-		//-->
-		</script>
+//-->
+</script>
 
-		<script language="JavaScript1.2" src="/shared/pageframework/scripts/HM_Loader.js" type="text/javascript"></script><script language="JavaScript1.2" src="http://www.netiq.com/shared/pageframework/scripts/HM_Arrays.js" type="text/javascript"></script><script language="JavaScript1.2" src="http://www.netiq.com/shared/pageframework/scripts/HM_ScriptDOM.js" type="text/javascript"></script>
-		
-           
-			<div id="menubox">
-			    <ul>
-					<li class="" style="width: 138px;"><a href="http://www.netiq.com/solutions/default.asp" onmouseover="HM_f_PopUp('elMenu1',event);" onmouseout="HM_f_PopDown('elMenu1');" id="products" style="width: 138px;">Products &amp; Solutions</a></li>
-                    <li class="" style="width: 128px;"><a style="width: 128px;" href="http://www.netiq.com/support/default.asp" onmouseover="HM_f_PopUp('elMenu2',event);" onmouseout="HM_f_PopDown('elMenu2');" id="support">Support &amp; Services</a></li>
-                    <li class="menusel" style="width: 102px;"><a href="http://www.netiq.com/about_netiq/default.asp" onmouseover="HM_f_PopUp('elMenu3',event);" onmouseout="HM_f_PopDown('elMenu3');" id="about" style="width: 102px;">About NetIQ</a></li>
-                    <li class="" style="width: 100px;"><a href="http://www.netiq.com/partners/default.asp" onmouseover="HM_f_PopUp('elMenu4',event);" onmouseout="HM_f_PopDown('elMenu4');" id="partners" style="width: 100px;">Partners</a></li>
-                    <li class="" style="width: 102px;"><a href="http://www.netiq.com/order/default.asp" id="shop" style="width: 102px;">Shop Online</a></li>
-                </ul>
-            </div>
-			
+<script language="JavaScript1.2" type="text/javascript" src="/shared/pageframework/Scripts/HM_Loader.js"></script><script src="/shared/pageframework/Scripts/HM_ScriptDOM.js" type="text/javascript">
+</script>
+<script src="/shared/pageframework/Configs/HM_Config2.js" type="text/javascript">
+</script>
+
+
+<div id="menubox">
+<ul>
+<li class="" style="width: 138px;"><a href="http://www.netiq.com/solutions/default.asp" onmouseover="HM_f_PopUp('elMenu1',event);" onmouseout="HM_f_PopDown('elMenu1');" id="products" name="products">Products &amp; Solutions</a></li>
+<li class="" style="width: 128px;"><a href="http://www.netiq.com/support/default.asp" onmouseover="HM_f_PopUp('elMenu2',event);" onmouseout="HM_f_PopDown('elMenu2');" id="support" name="support">Support &amp; Services</a></li>
+<li class="menusel" style="width: 102px;"><a href="http://www.netiq.com/about_netiq/default.asp" onmouseover="HM_f_PopUp('elMenu3',event);" onmouseout="HM_f_PopDown('elMenu3');" id="about" name="about">About NetIQ</a></li>
+<li class="" style="width: 100px; border-right: 1px solid #A7C5DF;"><a href="http://www.netiq.com/partners/default.asp" onmouseover="HM_f_PopUp('elMenu4',event);" onmouseout="HM_f_PopDown('elMenu4');" id="partners" name="partners">Partners</a></li>
+</ul>
+</div>
 
 	<div class="normcontenttop">
 	    <div id="funcheader">
@@ -305,18 +311,16 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 	</div>	
 	
 
-	
-	<div id="footer">
-		<p>
-		<a href="http://www.netiq.com/default.asp" class="footertoplink">Home</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/solutions/default.asp" class="footertoplink">Products &amp; Solutions</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/support/default.asp" class="footertoplink">Support &amp; Services</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netiq/default.asp" class="footertoplink">About NetIQ</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/partners/default.asp" class="footertoplink">Partners</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netiq/contactus.asp" class="footertoplink">Contact Us</a>
-		</p>
-		
-		
-		<a href="http://www.netiq.com/about_netIQ/legalnotices.asp#copyright" class="footerlink">Copyright © 1993-2005 NetIQ Corporation</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netIQ/legalnotices.asp" class="footerlink">Terms of Use</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netIQ/privacypolicy.asp" class="footerlink">Privacy Policy</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/sitemap/default.asp" class="footerlink">Sitemap</a>
-		<br>
-		<a href="http://www.netiq.com/products/am/default.asp" class="footerlink">Site Performance Ensured by AppManager</a>
-		
-	</div>	
+
+<div id="footer">
+<p><a href="http://www.netiq.com/default.asp" class="footertoplink">Home</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/solutions/default.asp" class="footertoplink">Products &amp; Solutions</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/support/default.asp" class="footertoplink">Support &amp; Services</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netiq/default.asp" class="footertoplink">About NetIQ</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/partners/default.asp" class="footertoplink">Partners</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netiq/contactus.asp" class="footertoplink">Contact Us</a></p>
+
+<a href="http://www.netiq.com/about_netIQ/legalnotices.asp#copyright" class="footerlink">Copyright © 1993-2006 NetIQ Corporation</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netIQ/legalnotices.asp" class="footerlink">Terms of Use</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/about_netIQ/privacypolicy.asp" class="footerlink">Privacy Policy</a>&nbsp;|&nbsp;<a href="http://www.netiq.com/sitemap/default.asp" class="footerlink">Site Map</a>
+
+<br>
+<a href="http://www.netiq.com/products/am/default.asp" class="footerlink">Site Performance Ensured by AppManager</a>
+
+</div>	
 </div>
 
 
@@ -325,20 +329,20 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 <!-- Copyright (c) 1996-2005 WebTrends Inc.  All rights reserved. -->
 <!-- V7.5 -->
 <!-- $DateTime$ -->
-<script language="Javascript"><!--
+<script type="text/javascript" language="Javascript"><!--
 gVersion="1.0";
 //-->
 </script>
-<script language="Javascript1.1"><!--
+<script type="text/javascript" language="Javascript1.1"><!--
 gVersion="1.1";
 //-->
 </script>
-<script language="Javascript1.2"><!--
+<script type="text/javascript" language="Javascript1.2"><!--
 gVersion="1.2";
 var RE={"%09":/\t/g,"%20":/ /g,"%23":/\#/g,"%26":/\&/g,"%2B":/\+/g,"%3F":/\?/g,"%5C":/\\/g};
 //-->
 </script>
-<script language="Javascript1.3"><!--
+<script type="text/javascript" language="Javascript1.3"><!--
 gVersion="1.3";
 if (window.ActiveXObject){
 	var gFV="";
@@ -356,15 +360,15 @@ if (window.ActiveXObject){
 }
 //-->
 </script>
-<script language="Javascript1.4"><!--
+<script type="text/javascript" language="Javascript1.4"><!--
 gVersion="1.4";
 //-->
 </script>
-<script language="Javascript1.5"><!--
+<script type="text/javascript" language="Javascript1.5"><!--
 gVersion="1.5";
 //-->
 </script>
-<script language="JavaScript"><!--
+<script type="text/javascript" language="JavaScript"><!--
 var gImages=new Array;
 var gIndex=0;
 var DCS=new Object();
@@ -381,7 +385,7 @@ if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"="
 //-->
 </script>
 
-<script language="Javascript"><!--
+<script type="text/javascript" language="Javascript"><!--
 
 function dcsMultiTrack(){
 	for (var i=0;i<arguments.length;i++){
@@ -426,14 +430,14 @@ function dcsVar(){
 	if (typeof(gVersion)!="undefined"){
 		WT.jv=gVersion;
 	}
-	if (document.body&&document.body.addBehavior){
-		document.body.addBehavior("#default#clientCaps");
-		if (document.body.connectionType){
-			WT.ct=document.body.connectionType;
-		}
-		document.body.addBehavior("#default#homePage");
-		WT.hp=document.body.isHomePage(location.href)?"1":"0";
-	}
+//	if (document.body&&document.body.addBehavior){
+//		document.body.addBehavior("#default#clientCaps");
+//		if (document.body.connectionType){
+//			WT.ct=document.body.connectionType;
+//		}
+//		document.body.addBehavior("#default#homePage");
+//		WT.hp=document.body.isHomePage(location.href)?"1":"0";
+//	}
 	if (parseInt(navigator.appVersion)>3){
 		if ((navigator.appName=="Microsoft Internet Explorer")&&document.body){
 			WT.bs=document.body.offsetWidth+"x"+document.body.offsetHeight;
