--- a/s/si/sim/simpy.com.html
+++ b/s/si/sim/simpy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the simpy.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210184345id_/http%3A//www.simpy.com/simpy/Privacy.do%3Bjsessionid%3Dc7flu90kb5m0) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the simpy.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615061510id_/http%3A//www.simpy.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
     <title>Privacy Policy</title>
